feature: mejorar en general para la v0.0.2